Fixed dark mode header

--- a/playbook/app/pb_kits/playbook/pb_table/styles/_sticky_header.scss
+++ b/playbook/app/pb_kits/playbook/pb_table/styles/_sticky_header.scss
@@ -14,7 +14,7 @@
       thead {
         position: sticky;
         background: #0a0527;
-        top: 0;
+        top: -40px;
       }
     }
   }
